Implement job_listings JOIN query using Hibernate API

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -3,9 +3,9 @@
 		xmlns="http://java.sun.com/xml/ns/javaee" 
 		xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
 	<display-name>jobhuntapp</display-name>
-	<welcome-file-list>
+	<!--  <welcome-file-list>
 		<welcome-file>pages/login.jsp</welcome-file>
-	</welcome-file-list>
+	</welcome-file-list> -->
 
 	<filter>
 		<filter-name>struts2</filter-name>
